--- a/css/old.styles.css
+++ b/css/old.styles.css
@@ -151,7 +151,6 @@ margin-top: 20px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
 }
 
 
@@ -207,7 +206,7 @@ margin-top: 20px;
     clip: rect(0 0 0 0);
     overflow: hidden;
 } */
-
+/* 
 .advantages-list {
     display: flex;
     gap: 24px;
@@ -243,7 +242,7 @@ margin-top: 20px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-}
+} */
 
 .section-team {
     background: #f4f4fd;
@@ -295,8 +294,6 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 .team-link-svg {
 fill: #f4f4fd;
 }
-
-
 
 .team-container {
     padding: 32px 0;
@@ -388,7 +385,7 @@ overflow: hidden;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-text,
+/* .team-text,
 .portfolio-text {
     font-size: 16px;
     line-height: 1.5;
@@ -403,7 +400,7 @@ overflow: hidden;
 
 .portfolio-text {
     text-align: left;
-}
+} */
 
 .page-footer {
     background-color: #2e2f42;
@@ -496,7 +493,6 @@ fill: #f4f4fd;
     text-align: center;
     color: #fff;
     cursor: pointer;
-
  }
 
  .footer-btn:hover,
