--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,6 @@ color: #404bbf;
 .page-header .container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
     .nav-list,
@@ -142,6 +141,10 @@ fill: #2f2f37;
     display: flex;
     gap: 40px;
     align-items: center;
+    }
+
+    .contacts-list {
+    padding-top: 16px;
     }
 
     .contacts {
@@ -213,6 +216,7 @@ margin-right: 76px;
 }
 
 .contacts-list {
+    padding-top: 0;
     flex-direction: row;
     align-items: center;
     gap: 40px;
@@ -276,10 +280,6 @@ margin-right: 76px;
 }
 
 .mobile-menu-nav {
-    margin-bottom: 48px;
-}
-
-.mobile-list-nav {
     margin-bottom: auto;
 }
 
@@ -298,20 +298,24 @@ margin-bottom: 40px;
 color: #2e2f42;
 }
 
-.mobile-link:hover,
-.mobile-link:focus {
+.mobile-link.blue {
 color: #404bbf;
 }
 
-.mobile-contacts {
-margin-bottom: 48px;
+.mobile-link {
+    color: #2e2f42;
+}
+
+.mobile-link:hover,
+.mobile-link:focus {
+color: #404bbf;
 }
 
 .mobile-contacts-list {
 display: flex;
 flex-direction: column;
 gap: 24px;
-margin-bottom: 40px;
+margin-bottom: 48px;
 }
 
 .mobile-contacts-link {
@@ -330,6 +334,7 @@ margin-bottom: 40px;
 
 .mobile-social-list {
 display: flex;
+justify-content: center;
 gap: 40px;
 }
 
@@ -337,9 +342,18 @@ gap: 40px;
 border-radius: 50%;
 }
 
+.mobile-social-item {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background-color: #4d5ae5;
+}
+
 .icon-mobile-social-link {
-    fill: #f4f4fd;;
-    background-color: #4d5ae5;
+fill: #f4f4fd;
 }
 
 
@@ -697,8 +711,8 @@ padding-bottom: 96px;
 }
 
 .portfolio-list {
-    display: flex;
-width: calc((100% - 24px) /2);
+/* width: calc((100% - 24px) /2); */
+gap: 24px 72px;
 }
 
 .portfolio-container {
