--- a/css/styles.css
+++ b/css/styles.css
@@ -693,7 +693,7 @@ padding-bottom: 96px;
 
 .portfolio-container {
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
+    /* border: 1px solid #e7e9fc; */
     border-top: none;
 }
 
@@ -703,21 +703,20 @@ padding-bottom: 96px;
     }
 }
 
-
 @media screen and (min-width: 768px) and (max-width: 1157px) {
-
-.section-portfolio .container {
-    
-}
-
 .portfolio-list {
-/* width: calc((100% - 24px) /2); */
-gap: 24px 72px;
+row-gap: 72px;
+column-gap: 24px;
 }
 
 .portfolio-container {
-    width: 100%;
+width: 100%;
 }
+
+.portfolio-list-item {
+flex-basis: calc((100% - 24px) / 2);
+}
+
 }
 
 @media screen and (min-width: 1158px) {
