--- a/css/styles.css
+++ b/css/styles.css
@@ -691,9 +691,12 @@ padding-bottom: 96px;
     gap: 48px 24px;
 }
 
+.portfolio-list-item {
+    border: 1px solid #E7E9FC;
+}
+
 .portfolio-container {
     padding: 32px 16px;
-    /* border: 1px solid #e7e9fc; */
     border-top: none;
 }
 
@@ -752,7 +755,6 @@ flex-basis: calc((100% - 24px) / 2);
     
         .portfolio-list-item {
             width: 360px;
-            border: 1px solid #E7E9FC;
             overflow: hidden;
             transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
